--- a/lil-playlist/src/index.css
+++ b/lil-playlist/src/index.css
@@ -44,7 +44,7 @@ code {
 
 .addItemComponent {
   width: 100%;
-  height: 200px;
+  height: 100px;
   background-color: aquamarine;
 }
 
@@ -52,7 +52,14 @@ code {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 50px;
+  height: auto;
+}
+
+.itemStateComponent button {
+  border-radius: 200px;
+  height: 70px;
+  width: 35px;
+  align-items: center;
 }
 
 .listItem {
