--- a/lil-playlist/src/index.css
+++ b/lil-playlist/src/index.css
@@ -6,6 +6,7 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -36,6 +37,9 @@ code {
   text-align: center;
 }
 
+ul {
+  padding: 0;
+}
 
 /*
   COMPONENTS
@@ -63,5 +67,32 @@ code {
 }
 
 .listItem {
-  list-style-type: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 0px 0px;
+    width: 100%;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "name-song name-artist genre rating";
+  }
+  
+  .name-song { grid-area: name-song; }
+  
+  .name-artist { grid-area: name-artist; }
+  
+  .genre { grid-area: genre; }
+  
+  .rating { grid-area: rating; }
+  
+
+.categories {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 0px 0px;
+  width: 100%;
+  grid-auto-flow: row;
+  grid-template-areas:
+  "name-song name-artist genre rating";
 }
